crates/ic-ptree/defs/cidl/constants.h

enum PlacementKind { BEGIN_FILE, BEFORE_DECLARATION, BEGIN_DECLARATION, END_DECLARATION, AFTER_DECLARATION, END_FILE };
enum numeric_kind {
    UNDEF_KIND,
    BOOLEAN_KIND,
    INT8_KIND,
    OCTET_KIND,
    SHORT_KIND,
    USHORT_KIND,
    LONG_KIND,
    ULONG_KIND,
    LONGLONG_KIND,
    ULONGLONG_KIND,
    FLOAT_KIND,
    DOUBLE_KIND,
    CHAR_KIND,
    STRING_KIND,
    PTREE_KIND
};
const char* numeric_kind_str(enum numeric_kind val);
struct numeric;
struct parser;
enum node_kind {
    N_UNDEF,
    N_INCLUDE,    
    N_PRIMITIVE,  
    N_NATIVE,     
    N_MODULE,     
    N_STRUCT,     
    N_UNION,      
    N_VALUETYPE,  
    N_INTERFACE,  
    N_EXCEPTION,  
    N_ENUM,       
    N_BITSET,     
    N_BITMASK,    
    N_CASE,       
    N_NULL,       
    N_MEMBER,     
    N_PROTOTYPE,  
    N_SEQUENCE,  
    N_MAP,       
    N_ARRAY,     
    N_STRING,    
    N_FIXED,     
    N_ALIAS,     
    N_CONST,     
    N_ANNOTATION_DEF,  
    N_ANNOTATION       
};
const char* node_kind_str(enum node_kind kind);
enum ptree_opts {
    OPT_DECLARATION = (1 << 0),
    OPT_IN = (1 << 1),
    OPT_OUT = (1 << 2),
    OPT_INOUT = (OPT_IN | OPT_OUT),
    OPT_READONLY = (1 << 3),
    OPT_PRIVATE = (1 << 4),
    OPT_DEFAULT = (1 << 5),  
    OPT_HAS_CHILDREN = (1 << 6),
    OPT_ENUMERATED = (1 << 7),
    OPT_EMIT_CODE = (1 << 8),
    OPT_SYSTEM_INCLUDE = (1 << 9),
    OPT_CIRCULAR = (1 << 10),
    OPT_SEQUENCE_LENGTH = (1 << 11),
    OPT_CONST_VALUE = (1 << 12),      
    OPT_ANONYMOUS_ALIAS = (1 << 13),  
    OPT_RUST_TRIVIAL = (1 << 14),      
    OPT_RUST_TOTAL_ORDER = (1 << 15),  
    OPT_LOCAL = (1 << 16),
    OPT_BUILTIN = (1 << 17),  
};
struct position {
    int line;
    int column;
};
struct identifier {
    const char* name;
    struct position pos;
};
struct ptree;
void clear_namespace_nodes(void);
void pragma_arg(const char* pragma);
void pragma_finish(void);
void switch_file(char* filename, char* included_as, int is_system_include);
void add_comment(const char* text);
void reset_comment(void);
void comment_complete(struct position first, struct position last);
extern enum node_kind ANY_KIND[];
extern int ZERO_BOUNDS;
INTERCOM_PUBLIC extern struct numeric num_undef;
const struct numeric* expr_convert(const struct numeric* value, enum numeric_kind kind);
const struct numeric* expr_unary(char op, const struct numeric* v);
const struct numeric* expr_binary(char op, const struct numeric* v1, const struct numeric* v2);
int idlerror(const char* msg);
int idlwarning(const char* msg);
extern struct position current_pos;
extern const char* current_input_file;
INTERCOM_PUBLIC extern struct ptree boolean_type;
INTERCOM_PUBLIC extern struct ptree int8_type;
INTERCOM_PUBLIC extern struct ptree octet_type;
INTERCOM_PUBLIC extern struct ptree char_type;
INTERCOM_PUBLIC extern struct ptree wchar_type;
INTERCOM_PUBLIC extern struct ptree short_type;
INTERCOM_PUBLIC extern struct ptree ushort_type;
INTERCOM_PUBLIC extern struct ptree long_type;
INTERCOM_PUBLIC extern struct ptree ulong_type;
INTERCOM_PUBLIC extern struct ptree longlong_type;
INTERCOM_PUBLIC extern struct ptree ulonglong_type;
INTERCOM_PUBLIC extern struct ptree float_type;
INTERCOM_PUBLIC extern struct ptree double_type;
INTERCOM_PUBLIC extern struct ptree ldouble_type;
INTERCOM_PUBLIC extern struct ptree fixed_type;
INTERCOM_PUBLIC extern struct ptree unbounded_string_type;
INTERCOM_PUBLIC extern struct ptree unbounded_wstring_type;
INTERCOM_PUBLIC extern struct ptree any_type;
INTERCOM_PUBLIC extern struct ptree object_type;
INTERCOM_PUBLIC extern struct ptree* annotation_type_id;
INTERCOM_PUBLIC extern struct ptree* annotation_type_autoid;
INTERCOM_PUBLIC extern struct ptree* annotation_type_optional;
INTERCOM_PUBLIC extern struct ptree* annotation_type_position;
INTERCOM_PUBLIC extern struct ptree* annotation_type_value;
INTERCOM_PUBLIC extern struct ptree* annotation_type_empty;
INTERCOM_PUBLIC extern struct ptree* annotation_type_extensibility;
INTERCOM_PUBLIC extern struct ptree* annotation_type_final;
INTERCOM_PUBLIC extern struct ptree* annotation_type_mutable;
INTERCOM_PUBLIC extern struct ptree* annotation_type_appendable;
INTERCOM_PUBLIC extern struct ptree* annotation_type_shared;
INTERCOM_PUBLIC extern struct ptree* annotation_type_key;
INTERCOM_PUBLIC extern struct ptree* annotation_type_must_understand;
INTERCOM_PUBLIC extern struct ptree* annotation_type_default;
INTERCOM_PUBLIC extern struct ptree* annotation_type_default_literal;
INTERCOM_PUBLIC extern struct ptree* annotation_type_range;