crates/ic-ptree/src/ptree.rs

// Copyright 2024 KONGSBERG
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are met:
//
// 1. Redistributions of source code must retain the above copyright notice,
//    this list of conditions and the following disclaimer.
//
// 2. Redistributions in binary form must reproduce the above copyright notice,
//    this list of conditions and the following disclaimer in the documentation
//    and/or other materials provided with the distribution.
//
// 3. Neither the name of the copyright holder nor the names of its contributors
//    may be used to endorse or promote products derived from this software
//    without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS “AS IS” AND
// ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
// WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
// DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
// FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
// DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
// SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
// CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
// OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
/* automatically generated by rust-bindgen 0.69.4 */

#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(clippy::all, clippy::unreadable_literal, unused)]

pub const BEGIN_FILE: PlacementKind = 0;
pub const BEFORE_DECLARATION: PlacementKind = 1;
pub const BEGIN_DECLARATION: PlacementKind = 2;
pub const END_DECLARATION: PlacementKind = 3;
pub const AFTER_DECLARATION: PlacementKind = 4;
pub const END_FILE: PlacementKind = 5;
pub type PlacementKind = ::std::os::raw::c_uint;
pub const UNDEF_KIND: numeric_kind = 0;
pub const BOOLEAN_KIND: numeric_kind = 1;
pub const INT8_KIND: numeric_kind = 2;
pub const OCTET_KIND: numeric_kind = 3;
pub const SHORT_KIND: numeric_kind = 4;
pub const USHORT_KIND: numeric_kind = 5;
pub const LONG_KIND: numeric_kind = 6;
pub const ULONG_KIND: numeric_kind = 7;
pub const LONGLONG_KIND: numeric_kind = 8;
pub const ULONGLONG_KIND: numeric_kind = 9;
pub const FLOAT_KIND: numeric_kind = 10;
pub const DOUBLE_KIND: numeric_kind = 11;
pub const CHAR_KIND: numeric_kind = 12;
pub const STRING_KIND: numeric_kind = 13;
pub const PTREE_KIND: numeric_kind = 14;
pub type numeric_kind = ::std::os::raw::c_uint;
extern "C" {
    pub fn numeric_kind_str(val: numeric_kind) -> *const ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct numeric {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct parser {
    _unused: [u8; 0],
}
pub const N_UNDEF: node_kind = 0;
pub const N_INCLUDE: node_kind = 1;
pub const N_PRIMITIVE: node_kind = 2;
pub const N_NATIVE: node_kind = 3;
pub const N_MODULE: node_kind = 4;
pub const N_STRUCT: node_kind = 5;
pub const N_UNION: node_kind = 6;
pub const N_VALUETYPE: node_kind = 7;
pub const N_INTERFACE: node_kind = 8;
pub const N_EXCEPTION: node_kind = 9;
pub const N_ENUM: node_kind = 10;
pub const N_BITSET: node_kind = 11;
pub const N_BITMASK: node_kind = 12;
pub const N_CASE: node_kind = 13;
pub const N_NULL: node_kind = 14;
pub const N_MEMBER: node_kind = 15;
pub const N_PROTOTYPE: node_kind = 16;
pub const N_SEQUENCE: node_kind = 17;
pub const N_MAP: node_kind = 18;
pub const N_ARRAY: node_kind = 19;
pub const N_STRING: node_kind = 20;
pub const N_FIXED: node_kind = 21;
pub const N_ALIAS: node_kind = 22;
pub const N_CONST: node_kind = 23;
pub const N_ANNOTATION_DEF: node_kind = 24;
pub const N_ANNOTATION: node_kind = 25;
pub type node_kind = ::std::os::raw::c_uint;
extern "C" {
    pub fn node_kind_str(kind: node_kind) -> *const ::std::os::raw::c_char;
}
pub const OPT_DECLARATION: ptree_opts = 1;
pub const OPT_IN: ptree_opts = 2;
pub const OPT_OUT: ptree_opts = 4;
pub const OPT_INOUT: ptree_opts = 6;
pub const OPT_READONLY: ptree_opts = 8;
pub const OPT_PRIVATE: ptree_opts = 16;
#[doc = "!< default case in union"]
pub const OPT_DEFAULT: ptree_opts = 32;
pub const OPT_HAS_CHILDREN: ptree_opts = 64;
#[doc = " enum member with explicit value, != the implicit value e.g. \"enum E { V0, V1 = 1, \
         ENUMERATED\n = 5, V3 };\" \\note also applied to the enum node, if any members have it"]
pub const OPT_ENUMERATED: ptree_opts = 128;
#[doc = " enum member with explicit value, != the implicit value e.g. \"enum E { V0, V1 = 1, \
         ENUMERATED\n = 5, V3 };\" \\note also applied to the enum node, if any members have it"]
pub const OPT_EMIT_CODE: ptree_opts = 256;
#[doc = " enum member with explicit value, != the implicit value e.g. \"enum E { V0, V1 = 1, \
         ENUMERATED\n = 5, V3 };\" \\note also applied to the enum node, if any members have it"]
pub const OPT_SYSTEM_INCLUDE: ptree_opts = 512;
#[doc = " enum member with explicit value, != the implicit value e.g. \"enum E { V0, V1 = 1, \
         ENUMERATED\n = 5, V3 };\" \\note also applied to the enum node, if any members have it"]
pub const OPT_CIRCULAR: ptree_opts = 1024;
#[doc = " enum member with explicit value, != the implicit value e.g. \"enum E { V0, V1 = 1, \
         ENUMERATED\n = 5, V3 };\" \\note also applied to the enum node, if any members have it"]
pub const OPT_SEQUENCE_LENGTH: ptree_opts = 2048;
#[doc = "!< node in struct numeric i.e. part of complex value"]
pub const OPT_CONST_VALUE: ptree_opts = 4096;
#[doc = "!< e.g. the element_type of \"sequence<\\@optional int8>\""]
pub const OPT_ANONYMOUS_ALIAS: ptree_opts = 8192;
pub const OPT_RUST_TRIVIAL: ptree_opts = 16384;
pub const OPT_RUST_TOTAL_ORDER: ptree_opts = 32768;
pub const OPT_LOCAL: ptree_opts = 65536;
pub const OPT_BUILTIN: ptree_opts = 131072;
pub type ptree_opts = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct position {
    pub line: ::std::os::raw::c_int,
    pub column: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_position() {
    const UNINIT: ::std::mem::MaybeUninit<position> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<position>(),
        8usize,
        concat!("Size of: ", stringify!(position))
    );
    assert_eq!(
        ::std::mem::align_of::<position>(),
        4usize,
        concat!("Alignment of ", stringify!(position))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).line) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(position),
            "::",
            stringify!(line)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).column) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(position),
            "::",
            stringify!(column)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct identifier {
    pub name: *const ::std::os::raw::c_char,
    pub pos: position,
}
#[test]
fn bindgen_test_layout_identifier() {
    const UNINIT: ::std::mem::MaybeUninit<identifier> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<identifier>(),
        16usize,
        concat!("Size of: ", stringify!(identifier))
    );
    assert_eq!(
        ::std::mem::align_of::<identifier>(),
        8usize,
        concat!("Alignment of ", stringify!(identifier))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(identifier),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pos) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(identifier),
            "::",
            stringify!(pos)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ptree {
    _unused: [u8; 0],
}
extern "C" {
    pub fn clear_namespace_nodes();
}
extern "C" {
    pub fn pragma_arg(pragma: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn pragma_finish();
}
extern "C" {
    pub fn switch_file(
        filename: *mut ::std::os::raw::c_char,
        included_as: *mut ::std::os::raw::c_char,
        is_system_include: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn add_comment(text: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn reset_comment();
}
extern "C" {
    pub fn comment_complete(first: position, last: position);
}
extern "C" {
    pub static mut ANY_KIND: [node_kind; 0usize];
}
extern "C" {
    pub static mut ZERO_BOUNDS: ::std::os::raw::c_int;
}
extern "C" {
    pub static mut num_undef: numeric;
}
extern "C" {
    pub fn expr_convert(value: *const numeric, kind: numeric_kind) -> *const numeric;
}
extern "C" {
    pub fn expr_unary(op: ::std::os::raw::c_char, v: *const numeric) -> *const numeric;
}
extern "C" {
    pub fn expr_binary(
        op: ::std::os::raw::c_char,
        v1: *const numeric,
        v2: *const numeric,
    ) -> *const numeric;
}
extern "C" {
    pub fn idlerror(msg: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn idlwarning(msg: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub static mut current_pos: position;
}
extern "C" {
    pub static mut current_input_file: *const ::std::os::raw::c_char;
}
extern "C" {
    pub static mut boolean_type: ptree;
}
extern "C" {
    pub static mut int8_type: ptree;
}
extern "C" {
    pub static mut octet_type: ptree;
}
extern "C" {
    pub static mut char_type: ptree;
}
extern "C" {
    pub static mut wchar_type: ptree;
}
extern "C" {
    pub static mut short_type: ptree;
}
extern "C" {
    pub static mut ushort_type: ptree;
}
extern "C" {
    pub static mut long_type: ptree;
}
extern "C" {
    pub static mut ulong_type: ptree;
}
extern "C" {
    pub static mut longlong_type: ptree;
}
extern "C" {
    pub static mut ulonglong_type: ptree;
}
extern "C" {
    pub static mut float_type: ptree;
}
extern "C" {
    pub static mut double_type: ptree;
}
extern "C" {
    pub static mut ldouble_type: ptree;
}
extern "C" {
    pub static mut fixed_type: ptree;
}
extern "C" {
    pub static mut unbounded_string_type: ptree;
}
extern "C" {
    pub static mut unbounded_wstring_type: ptree;
}
extern "C" {
    pub static mut any_type: ptree;
}
extern "C" {
    pub static mut object_type: ptree;
}
extern "C" {
    pub static mut annotation_type_id: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_autoid: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_optional: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_position: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_value: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_empty: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_extensibility: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_final: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_mutable: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_appendable: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_shared: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_key: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_must_understand: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_default: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_default_literal: *mut ptree;
}
extern "C" {
    pub static mut annotation_type_range: *mut ptree;
}
